[package]
name = "quick-challenge"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bitcoin = "0.32.2"
bytes = "1.5"
chrono = { version = "0.4", default-features = false, features = [
    "serde",
    "clock",
    "std",
] }
clap = { version = "4.4", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
envy = "0.4"
futures = "0.3"
log = "0.4"
rand = "0.8"
serde = "1.0"
serde_derive = "1.0"
thiserror = "1.0"
tokio = { version = "1.34", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "=0.1.40"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "tracing-log",
  "json",
  "tracing",
] }
